Removing extra spaces in docker-compose.ec2.yml

--- a/docker-compose.ec2.yml
+++ b/docker-compose.ec2.yml
@@ -54,4 +54,4 @@ networks:
   net1:
 
 volumes:
-  mysql_data:                                                                                   1,6           Top
+  mysql_data:
