docker-compose qa copied from qa

--- a/docker-compose.qa.yml
+++ b/docker-compose.qa.yml
@@ -10,8 +10,8 @@ services:
       DB_DATABASE: test
       DB_USER: admin
     restart: always
-    networks:
-      - net1
+    #networks:
+    #  - net1
 
   frontend:
     image: 343830488876.dkr.ecr.us-east-1.amazonaws.com/midterm/ecr_2:frontend_latest
@@ -20,8 +20,8 @@ services:
     depends_on:
       - backend
     restart : always
-    networks:
-      - net1
+    #networks:
+    #  - net1
 
-networks:
-  net1:
+#networks:
+#  net1:
